# acc-connector-extension

./: .gitignore  README.md  browser-extension-plan.md  install.ps1  install.sh  pyproject.toml  raw_send.c  requirements.txt
.claude/: settings.local.json
.github/workflows/: release.yml
Documentation/: flatpak-firefox-native-messaging.md  rewrite-rust-plan.md  set-cap-issues-and-rust-rewrite.md
src/extension/: background.js  manifest.json  manifest_firefox.json  popup.css  popup.html
src/extension_firefox/: background.js  content.js  manifest.json  popup.css  popup.js
src/native_host/: config.py  discovery.py  host.py  models.py  setup.py
tests/: test_discovery.py  test_host.py  test_models.py
